<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.ops4j</groupId>
        <artifactId>master</artifactId>
        <version>4.3.0</version>
    </parent>
    <artifactId>krabbl</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>OPS4J Krabbl Reactor</name>

    <description>
        A modular web crawler.
    </description>

    <properties>
        <org.slf4j.version>1.7.12</org.slf4j.version>
    </properties>

    <scm>
        <connection>scm:git:git@github.com:ops4j/org.ops4j.krabbl.git</connection>
        <developerConnection>scm:git:git@github.com:ops4j/org.ops4j.krabbl.git</developerConnection>
        <url>git@github.com:ops4j/org.ops4j.krabbl.git</url>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>krabbl-api</module>
        <module>krabbl-core</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>1.1.3</version>
            </dependency>
            <dependency>
                <groupId>javax.ws.rs</groupId>
                <artifactId>javax.ws.rs-api</artifactId>
                <version>2.0.1</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>4.5.3</version>
                <exclusions>
                    <exclusion>
                        <groupId>commons-logging</groupId>
                        <artifactId>commons-logging</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpcore</artifactId>
                <version>4.4.6</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>3.7.0</version>
            </dependency>
            <dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>1.10.2</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${org.slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>jcl-over-slf4j</artifactId>
                <version>${org.slf4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.asciidoctor</groupId>
                    <artifactId>asciidoctor-maven-plugin</artifactId>
                    <version>1.5.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <url>http://ops4j.github.io/krabbl/${project.version}/</url>
    <inceptionYear>2017</inceptionYear>

    <issueManagement>
        <system>jira</system>
        <url>http://team.ops4j.org/browse/KRABBL</url>
    </issueManagement>

    <developers>
        <developer>
            <id>hwellmann</id>
            <name>Harald Wellmann</name>
            <email>harald.wellmann@gmx.de</email>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>UTC+1</timezone>
        </developer>
    </developers>

    <profiles>

        <!-- Profiles for "Sonar" -->
        <!-- The sonar profile should be activated by setting property 'sonar'. That's important because 
            we need to set an empty 'jacoco.argLine' otherwise. You can't define an empty default for that property 
            in the global properties section because the empty value will override the value from Jacoco. -->
        <profile>
            <id>no-sonar</id>
            <activation>
                <property>
                    <name>!sonar</name>
                </property>
            </activation>
            <properties>
                <jacoco.argLine />
            </properties>
        </profile>
        <profile>
            <id>sonar</id>
            <activation>
                <property>
                    <name>sonar</name>
                </property>
            </activation>
            <properties>
                <!-- Import Sonar URL from Jenkins environment -->
                <sonar.host.url>${env.SONAR_HOST_URL}</sonar.host.url>
                <sonar.jacoco.reportPath>${user.dir}/target/jacoco.exec</sonar.jacoco.reportPath>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonarsource.scanner.maven</groupId>
                        <artifactId>sonar-maven-plugin</artifactId>
                        <version>3.2</version>
                    </plugin>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>0.7.9</version>
                        <executions>
                            <execution>
                                <id>jacoco</id>
                                <phase>validate</phase>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                                <configuration>
                                    <append>true</append>
                                    <destFile>${sonar.jacoco.reportPath}</destFile>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>java9</id>
            <activation>
                <jdk>9</jdk>
            </activation>
            <properties>
                <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
            </properties>
        </profile>
    </profiles>

</project>
